# VTA-Book

./: .gitignore  404.html  cron.conf  index.html  main.py  memo  mkdocs.yml  nginx.conf  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
book/: 404.html  index.html
book/search/: search_index.json
doc/: index.md
docs/: index.md  privacy-policy.md
docs/Python基礎/: index.md
docs/chapter-1/: 1-python-world.md  1.0-python-world.md  1.1a-macos-install.md  1.1b-windows-install.md  1.2.0-what-CodeEditor.md  1.2.1-install-VSCode.md  1.2.2-setup-VSCode.md  1.2.3-plugin-VSCode.md  1.3.0-interpreter.md  1.4.0-how-to-save-files.md  1.5.0-how-to-use-terminal.md  1.6.0-python-variable.md  1.7.0-python-string.md  2a-macos-install.md  2b-windows-install.md  how-to-save-files.md  how-to-use-terminal.md  interpreter.md  macos-install.md  python-int.md  python-list.md  python-string.md  python-variable.md  python-world.md  windows-install.md
docs/chapter-1/memo/: string-memo.md
docs/competitive/: 1.0-competitive-python.md  competitive-python.md
docs/competitive/tips/: competitive-list-comprehensions.md
docs/javascripts/: shortcuts.js
docs/stylesheets/: extra.css
overrides/: 404.html  main.html
overrides/partials/: logo.html  social.html
search/: search_index.json
