[tool.poetry]
name = "vta-python-book"
version = "0.1.0"
description = ""
authors = ["HEKUCHAN <heitorhirose@gmail.com>"]
readme = "README.md"
packages = [{include = "vta_python_book"}]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
